# agile_agentic_analytics

./: AGENTS.md  CLAUDE.md  PLUGINS_AND_SKILLS.md  PLUGIN_ARCHITECTURE.md  PLUGIN_SKILLS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: ADVANCED_SKILLS.md  CREATE_PLUGINS.md  THINKING_IN_BETS.md  marketing_analytics_skill_specs.md
examples/: clv_segmentation_workflow.md  funnel_optimization.md  generate_sample_data.py  quick_start.md
examples/data/: campaign_spend_google.csv  campaign_spend_meta.csv  email_sends.csv  events.csv  search_console.csv  survey_responses.csv  transactions.csv
knowledge/experimentation/: 01. Experimentation in Regulated Finance.md  02. When Is an Experiment Done - Decision Thresholds Beyond Statistical Significance.md  02c. When Is an Experiment Done -Decision Thresholds Beyond Statistical Significance.md  02g. When Is an Experiment Done - Decision Thresholds Beyond Statistical Significance.docx.md  02m. When Is an Experiment Done - Decision Thresholds Beyond Statistical Significance.md  03. The Role of Null Results in Mature Experimentation Programs.md  03c. The Role of Null Results in Mature Experimentation Programs.md  03g. The Role of Null Results in Mature Experimentation Programs.md  03m. The Role of Null Results in Mature Experimentation Programs.md  04. Power, MDE, and Practical Feasibility in Low-Velocity Channels.md  05. Sequential Testing Methods in Business Experiments.md  06. Variance Reduction Techniques_ CUPED, CUPAC, and Beyond.md  07. Ratio Metrics and Correlated User Behavior in Experiments.md  08. Email Experimentation in the Post-Apple Mail Privacy Era.md  09. Measuring Incrementality in Email Marketing.md  10. Email Fatigue, Frequency, and Long-Term Effects.md  11. From ATE to CATE_ Extracting Value from Flat Experiments.md  12. When (and When Not) to Personalize Based on Experimental Results.md  13. Multi-Armed Bandits vs Controlled Experiments.md  14. Building an Experimentation Operating Model.md  15. Experimentation Metrics That Align with Business Strategy.md  16. Communicating Experiment Results to Senior Stakeholders.md  17. Experimentation, Trust, and Consumer Perception.md  18. Legal and Compliance Considerations in Marketing Experiments.md  19. Unified Measurement_ How Experiments Fit with MMM and Attribution.md  20. The Future of Experimentation in Marketing (2025–2030).md  21. From Holdouts to Experimentation - The First-Year Maturity Curve.md  21c. From Holdouts to Experimentation - The First-Year Maturity Curve.md  21g. From Holdouts to Experimentation_ The First-Year Maturity Curve.md  21m. From Holdouts to Experimentation - The First-Year Maturity Curve.md  22. Designing “Safe First Experiments” in High-Trust Organizations.md  23. What Can Be Learned in the First 48 Hours of an Experiment.md  23c. What Can Be Learned in the First 48 Hours of an Experiment.md  23g. What Can Be Learned in the First 48 Hours of an Experiment.md  23m. Identifying Reliable Signals in Early Marketing Experiments.md  24. Temporal Dynamics of Experiment Data_ Early, Middle, and Late Signals.md  25. Debunking the 30-Day-Experiment Myth.md  25c. Debunking the 30-Day-Experiment Myth.md  25g. Debunking the 30-Day-Experiment Myth.md  25m. Debunking the 30-Day-Experiment Myth.md
plugins/ab-testing/: README.md  settings.json
plugins/ab-testing/.claude-plugin/: plugin.json
plugins/ab-testing/agents/: statistician.md  (+1 more)
plugins/campaign-analysis/: README.md
plugins/experimentation/: README.md
plugins/marketing-analytics/: CLAUDE.md  README.md
plugins/product-manager/: CLAUDE.md  README.md
templates/skills/: COMPONENTS.md  COMPONENT_SAMPLES.md
tests/: conftest.py
tests/test_audience_segmentation/: test_rfm_scoring.py
tests/test_email_analytics/: test_engagement_analysis.py
tests/test_funnel_analysis/: test_funnel_stats.py
tests/test_integration/: test_segmentation_to_email.py
tests/test_voc_analytics/: test_compute_metrics.py
tests/test_web_analytics/: test_web_anomaly_detection.py
(+215 files in other folders)
