[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-agentic-analytics"
version = "1.0.0"
description = "Marketing analytics Claude Code plugin with Bayesian modeling, NLP, and visualization capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Brian Weisberg"},
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
bayesian = [
    "pymc-marketing>=0.7",
    "arviz>=0.17",
    "lifetimes>=0.11",
]
visualization = [
    "plotly>=5.18",
    "jinja2>=3.1",
]
nlp = [
    "transformers>=4.35",
    "torch>=2.1",
]
google = [
    "google-analytics-data>=0.18",
    "google-auth>=2.23",
]
anthropic = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
]
all = [
    "agile-agentic-analytics[bayesian,visualization,nlp,google,anthropic,dev]",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Test files manipulate sys.path before importing from skill scripts; the late
# imports are intentional, so E402 doesn't apply.
"tests/**/*.py" = ["E402", "F841"]
# Pre-existing local-variable, ambiguous-name, and optional-import patterns in
# plugin scripts. Tracked for a future cleanup pass; ignored here so unrelated
# work isn't blocked.
"examples/generate_sample_data.py" = ["F841"]
"plugins/marketing-analytics/skills/clv-modeling/scripts/validate_clv.py" = ["F841"]
"plugins/marketing-analytics/skills/funnel-analysis/scripts/funnel_stats.py" = ["F841"]
"plugins/marketing-analytics/skills/paid-media/scripts/normalize_platforms.py" = ["F841"]
"plugins/marketing-analytics/skills/social-analytics/scripts/content_analysis.py" = ["F841"]
"plugins/marketing-analytics/skills/voc-analytics/scripts/compute_metrics.py" = ["F841"]
"plugins/marketing-analytics/skills/voc-analytics/scripts/satisfaction_trends.py" = ["F841"]
"plugins/marketing-analytics/skills/voc-analytics/scripts/text_categorization.py" = ["F841"]
"plugins/marketing-analytics/skills/web-analytics/scripts/extract_ga4.py" = ["F401"]
"plugins/marketing-analytics/skills/web-analytics/scripts/path_analysis.py" = ["F841", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
